--- a/index.html
+++ b/index.html
@@ -325,6 +325,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Falta revisar las imágenes de aquí -->
             <div class="col-lg-4">
                 <div class="product-offer mb-30" style="height: 200px;">
                     <img class="img-fluid" src="img/offer-1.jpg" alt="">
@@ -348,6 +350,7 @@
     <!-- fin del carrusel -->
 
 
+<!-- Creo que no será necesario -->
     <!-- Cuadros de servicios -->
     <div class="container-fluid pt-5">
         <div class="row px-xl-5 pb-3">
@@ -380,6 +383,7 @@
     <!-- Final de los cuadros de servicios -->
 
 
+<!-- De aquí para abajo falta meter la información e imágenes de nosotros -->
     <!-- Categorías -->
     <div class="container-fluid pt-5">
         <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4"><span class="bg-secondary pr-3">Categories</span></h2>
