--- a/shop.html
+++ b/shop.html
@@ -218,7 +218,7 @@
         <div class="row px-xl-5">
             <div class="col-12">
                 <nav class="breadcrumb bg-light mb-30">
-                    <a class="breadcrumb-item text-dark" href="index.html">Home</a>
+                    <a class="breadcrumb-item text-dark" href="index.html">Inicio</a>
                     <a class="breadcrumb-item text-dark" href="#">Compras</a>
                     <span class="breadcrumb-item active">Lista de compras</span>
                 </nav>
@@ -383,7 +383,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="HSNp.jpg" alt="HSN">
+                                <img class="img-fluid w-100" src="img/HSNp.jpg" alt="HSN">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
                                     <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
