--- a/shop.html
+++ b/shop.html
@@ -383,7 +383,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
                         <div class="product-item bg-light mb-4">
                             <div class="product-img position-relative overflow-hidden">
-                                <img class="img-fluid w-100" src="img/HSNp.jpg" alt="HSN">
+                                <img class="img-fluid w-100" src="img/productos/HSNp.jpg" alt="HSN">
                                 <div class="product-action">
                                     <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
                                     <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
@@ -392,7 +392,7 @@
                                 </div>
                             </div>
                             <div class="text-center py-4">
-                                <a class="h6 text-decoration-none text-truncate" href="">HSN</a>
+                                <a class="h6 text-decoration-none text-truncate" href=""><strong>HSN</strong></a>
                                 <div class="d-flex align-items-center justify-content-center mt-2">
                                     <h5>$490.00</h5><h6 class="text-muted ml-2"><del>$550.00</del></h6>
                                 </div>
