--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 <!-- Falta revisar las imágenes de aquí -->
             <div class="col-lg-4">
                 <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="img/offer-1.jpg" alt="">
+                    <img class="img-fluid" src="img/offer-1.png" alt="">
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">20% de descuento</h6>
                         <h3 class="text-white mb-3">Oferta Especial</h3>
@@ -336,7 +336,7 @@
                     </div>
                 </div>
                 <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="img/offer-2.jpg" alt="">
+                    <img class="img-fluid" src="img/offer-2.png" alt="">
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">20% de descuento</h6>
                         <h3 class="text-white mb-3">Oferta Especial</h3>
