--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 
 <body>
     <!-- Topbar Start -->
-    <?php
-    include("BarraSuperior.php");
-    ?>
+    
+    include("BarSup.html");
+    
     <!-- Topbar End -->
 
 
