--- a/index.html
+++ b/index.html
@@ -932,28 +932,28 @@
             <div class="col">
                 <div class="owl-carousel vendor-carousel">
                     <div class="bg-light p-4">
-                        <img src="img/1.jpg" alt="">
+                        <img src="img/logos/1.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/2.jpg" alt="">
+                        <img src="img/logos/2.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/3.jpg" alt="">
+                        <img src="img/logos/3.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/4.jpg" alt="">
+                        <img src="img/logos/4.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/5.jpg" alt="">
+                        <img src="img/logos/5.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/6.jpg" alt="">
+                        <img src="img/logos/6.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/7.jpg" alt="">
+                        <img src="img/logos/7.jpg" alt="">
                     </div>
                     <div class="bg-light p-4">
-                        <img src="img/8.jpg" alt="">
+                        <img src="img/logos/8.jpg" alt="">
                     </div>
                 </div>
             </div>
